--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,16 +2,14 @@
 name = "kroeg"
 version = "0.1.0"
 authors = ["Puck Meerburg <puck@puckipedia.com>"]
-
-[features]
-default = ["mastodon", "oauth"]
-mastodon = ["kroeg-mastodon"]
-oauth = ["kroeg-oauth"]
+edition = "2018"
 
 [dependencies]
-kroeg-mastodon = { path = "../mastodon", optional = true }
-kroeg-oauth = { path = "../oauth", optional = true }
 kroeg-server = { path = "../server" }
-hyper = "0.12"
-futures = "0.1"
+kroeg-tap = { path = "../tap/tap" }
+http-service = "0.3"
+http-service-hyper = "0.3"
+async-std = "0.99"
 dotenv = "0.9.0"
+async-trait = "0.1"
+http = "0.1.18"
