--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ oauth = ["kroeg-oauth"]
 kroeg-server = { path = "../server" }
 kroeg-cellar = { path = "../cellar" }
 kroeg-tap = { path = "../tap/tap" }
+kroeg-tap-activitypub = { path = "../tap/activitypub" }
 kroeg-mastodon = { path = "../mastodon", optional = true }
 kroeg-oauth = { path = "../oauth", optional = true }
 jsonld = { path = "../jsonld-rs" }
@@ -25,3 +26,5 @@ dotenv = "0.9.0"
 async-trait = "0.1"
 http = "0.1.18"
 serde_json = "1.0"
+openssl = "0.10"
+base64 = "0.9"
