Move to use database pool

--- a/server.toml.example
+++ b/server.toml.example
@@ -1,12 +1,6 @@
-# If you want this process to listen for HTTP requests, set listen to the location you want it to listen at.
-listen = "127.0.0.1:3000"
-
-# Do you want this process to deliver statuses and handle other background tasks? Set this value to the amount
-# of simultaneous tasks to handle.
-deliver = 1
-
-# The PostgreSQL database to connect to.
+# The database to connect to.
 [database]
+backend = "postgresql"
 server = "127.0.0.1:5432"
 username = "postgres"
 password = "postgres"
@@ -14,11 +8,9 @@ database = "postgres"
 
 # This part describes information about the server itself.
 [server]
-
-# The base URI is the basae that this process will host data. When listening, it will assume any requests start
-#  with the base URI. The base URI *must not* have a trailing slash, lest you want to invoke horrible debugging
+# The domain this server is running on, without trailing slash, lest you want to invoke horrible debugging
 #  on yourself.
-base_uri = "http://127.0.0.1:3000"
+domain = "http://127.0.0.1:3000"
 
 # The name that this server should show up as.
 name = "Test instance"
