--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ async-std = "0.99"
 dotenv = "0.9.0"
 async-trait = "0.1"
 http = "0.1.18"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 openssl = "0.10"
 base64 = "0.9"
+toml = "0.5"
